--- a/MultipleLocalization/MultipleLocalization/Base.lproj/Main.storyboard
+++ b/MultipleLocalization/MultipleLocalization/Base.lproj/Main.storyboard
@@ -36,16 +36,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="10U-bm-mf6">
-                                <rect key="frame" x="147" y="602" width="120" height="60"/>
+                                <rect key="frame" x="137" y="602" width="140" height="60"/>
                                 <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="120" id="SQj-Xp-KR2"/>
+                                    <constraint firstAttribute="width" constant="140" id="SQj-Xp-KR2"/>
                                     <constraint firstAttribute="height" constant="60" id="coV-Vt-zUp"/>
                                 </constraints>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button">
-                                    <fontDescription key="titleFontDescription" style="UICTFontTextStyleTitle2"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Randomize">
+                                    <fontDescription key="titleFontDescription" style="UICTFontTextStyleTitle3"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="randomize:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nSg-rG-Y9f"/>
